Estoque de produtos atualizado de acordo com Status do Pedido